Adding DbPatch with a patch file to create users.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -12,11 +12,29 @@ phpSettings.date.timezone = "Europe/London"
 ; namespaces and autoloader
 appnamespace = "App"
 autoloaderNamespaces.Doctrine = "Doctrine_"
-autoloaderNamespaces.Coda = "Code_"
+autoloaderNamespaces.Code = "Code_"
+autoloaderNamespaces.DbPatch = "DbPatch_"
 
 ; doctrine - user:pass@host/db
 doctrine.connection_string = "mysql://root:erek0sa@localhost/competence"
 doctrine.cache = false
+
+; DbPatch configuration
+limit = 10
+default_branch = default
+patch_directory = APPLICATION_PATH "/../var/dbpatch"
+patch_prefix = patch
+color = false
+dump_before_update = false
+dump_directory =
+db.adapter = "PDO_MYSQL"
+import_command = "mysql -h{host} {%port%}-P{port} {%port%}-u{username} {%password%}-p{password} {%password%}--default-character-set={charset} {dbname} < {filename} 2>&1"
+dump_command   = "mysqldump -h{host} {%port%}-P{port} {%port%}-u{username} {%password%}-p{password} {%password%}--default-character-set={charset} {dbname} > {filename} 2>&1"
+db.params.charset = "utf8"
+db.params.host = "localhost"
+db.params.username = "root"
+db.params.password = "erek0sa"
+db.params.dbname = "competence"
 
 hostname = erekosa.privatedns.org
 
