Adding Twitter Bootstrap Form Decorator.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -13,6 +13,7 @@ phpSettings.date.timezone = "Europe/London"
 appnamespace = "App"
 autoloaderNamespaces.Doctrine = "Doctrine_"
 autoloaderNamespaces.Code = "Code_"
+autoloaderNamespaces.Twitter = "Twitter_"
 autoloaderNamespaces.DbPatch = "DbPatch_"
 
 ; doctrine - user:pass@host/db
