Added initial ACL Library. This was pinched from another project so this needs going through with a fine comb. ACL also includes Auth.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -15,10 +15,14 @@ autoloaderNamespaces.Doctrine = "Doctrine_"
 autoloaderNamespaces.Code = "Code_"
 autoloaderNamespaces.Twitter = "Twitter_"
 autoloaderNamespaces.DbPatch = "DbPatch_"
+autoloaderNamespaces.ACL = "ACL_"
 
 ; doctrine - user:pass@host/db
 doctrine.connection_string = "mysql://root:erek0sa@localhost/competence"
 doctrine.cache = false
+
+; ACL
+;resources.frontController.plugins.authControl = "ACL_Plugin_AuthControlPlugin"
 
 ; DbPatch configuration
 limit = 10
