Confirmed ACL is now working (initially). Added supporting auth controller and error controller.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -22,7 +22,7 @@ doctrine.connection_string = "mysql://root:erek0sa@localhost/competence"
 doctrine.cache = false
 
 ; ACL
-;resources.frontController.plugins.authControl = "ACL_Plugin_AuthControlPlugin"
+resources.frontController.plugins.authControl = "ACL_Plugin_AuthControl"
 
 ; DbPatch configuration
 limit = 10
@@ -45,7 +45,7 @@ hostname = erekosa.privatedns.org
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.view.doctype = "HTML5"
-resources.view.helperPath.Coda_View_Helper = APPLICATION_PATH "/../library/Code/View/Helper/"
+resources.view.helperPath.Code_View_Helper = APPLICATION_PATH "/../library/Code/View/Helper/"
 
 [staging : production]
 
