--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -22,7 +22,7 @@ doctrine.connection_string = "mysql://root:erek0sa@localhost/competence"
 doctrine.cache = false
 
 ; ACL
-resources.frontController.plugins.authControl = "ACL_Plugin_AuthControl"
+;resources.frontController.plugins.authControl = "ACL_Plugin_AuthControl"
 
 ; DbPatch configuration
 limit = 10
@@ -54,6 +54,13 @@ phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 
 [development : production]
+phpSettings.display_startup_errors = 1
+phpSettings.display_errors = 1
+resources.frontController.params.displayExceptions = 1
+
+resources.frontController.plugins.authControl = "ACL_Plugin_AuthControl"
+
+[developmentcli : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
