Massive update on ACL. Getting invalid login details.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -4,7 +4,7 @@ phpSettings.display_errors = 0
 includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
-; appnamespace = "Application"
+resources.frontController.actionhelperpaths.Code_Action_Helper = APPLICATION_PATH "/../library/Code/Action/Helper"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 phpSettings.date.timezone = "Europe/London"
